--- a/style.css
+++ b/style.css
@@ -182,6 +182,9 @@ td:first-child {
     display: inline-block;
     margin: 10px;
 }
+/* #adoption_Info #cat_Adoption_Photo #photo1 {
+    border: 1px solid #ffebdd;
+} */
 #adoption_Info #cat_Adoption_Photo li img{
     margin: 0px;
     /* border: 2px solid #ffebdd; */
