--- a/style.css
+++ b/style.css
@@ -296,9 +296,10 @@ input[type="text"] {
     opacity: 0.7;
     width: 300px;
     height: 200px;
-    position: relative;
-    /* top: -400px; */
+    position: absolute;
     visibility: hidden;
+    /* left: 50%;
+    top: 50%; */
 }
 #info_box_heading {
     color: #fff;
