--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 	font-family: Arial, Helvetica, sans-serif;
 	padding:0; 
 	margin: 5px 0px;
+    z-index: 3;
 }
 
 h3 {
@@ -334,4 +335,44 @@ input[type="text"] {
 
 #info_box_close:hover {
     cursor: pointer;
+}
+
+.backdrop {
+    z-index: 1;
+    opacity: .0;
+    filter: alpha(opacity=0);
+    display: none;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background: #000;
+}
+
+.largePhotoBox {
+    z-index: 2;
+    position: fixed;
+    opacity: 1;
+    display: none;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    height: auto;
+    background: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    /* -moz-box-shadow: 0px 0px 5px #444;
+    -webkit-box-shadow: 0px 0px 5px #444; */
+    box-shadow: 0px 0px 5px #444;
+}
+
+.close {
+    float: right;
+    cursor: pointer;
+}
+
+.largePhotoBox img {
+    width: 400px;
 }
